@@ -1,9 +1,7 @@
 #!/bin/sh
 # $Id$
-# fmtutil-sys: Thomas Esser, public domain.
-
-# wrapper script for fmtutil with TEXMFVAR and TEXMFCONFIG set to
-#   TEXMFSYSVAR / TEXMFSYSCONFIG
+# fmtutil-sys - arrange for fmtutil to affect system directories. 
+# Public domain.  Originally written by Thomas Esser.
 
 test -f /bin/ksh && test -z "$RUNNING_KSH" \
   && { UNAMES=`uname -s`; test "x$UNAMES" = xULTRIX; } 2>/dev/null \
@@ -17,7 +15,6 @@ unset RUNNING_BSH
 
 # hack around a bug in zsh:
 test -n "${ZSH_VERSION+set}" && alias -g '${1+"$@"}'='"$@"'
-export PATH
 
 # preferentially use subprograms from our own directory.
 mydir=`echo "$0" | sed 's,/[^/]*$,,'`
